Gallery overflow issue on safari - added position relative

--- a/src/pages/Design/Design.sass
+++ b/src/pages/Design/Design.sass
@@ -9,6 +9,7 @@
         object-fit: cover
 
 .design__grid
+    position: relative
     height: calc(100vh - 80px)
     overflow-y: scroll
     overflow-x: hidden
